--- a/compose-traefik-pgsql-local.yaml
+++ b/compose-traefik-pgsql-local.yaml
@@ -33,7 +33,7 @@ services:
     container_name: zabbix-postgres
     restart: unless-stopped
     environment:
-      - POSTGRES_DB=${POSTGRES_DB}
+      # - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
