--- a/compose-zabbix-agent.yaml
+++ b/compose-zabbix-agent.yaml
@@ -5,6 +5,8 @@ services:
     image: zabbix/zabbix-agent2:latest
     container_name: zabbix-agent
     restart: unless-stopped
+    ports:
+      - "10050:10050"
     environment:
       - ZBX_SERVER_HOST=${ZBX_SERVER_HOST}
       - ZBX_HOSTNAME=${ZBX_HOSTNAME}
@@ -18,4 +20,3 @@ services:
       - /sys:/host/sys:ro
       - /proc:/host/proc:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-
